fix: overflow x on page

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -10,6 +10,10 @@
   --brown: #5C493E;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 // background color
 .bg-yellow {
   background-color: var(--main-yellow) !important;
